// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeTime components basic render 1`] = `
<TYText
  align={null}
  color={null}
  ellipsizeMode="tail"
  numberOfLines={1}
  size={null}
  style={
    Object {
      "color": "#010101",
      "flex": 1,
      "fontSize": 32,
      "fontWeight": "500",
    }
  }
  type={null}
  weight={null}
>
  01:00 - 02:00
</TYText>
`;

exports[`SingleTime components basic render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <TYText
    align={null}
    color={null}
    size={null}
    style={
      Object {
        "color": "#010101",
        "fontSize": 32,
        "fontWeight": "500",
        "marginRight": 8,
      }
    }
    type={null}
    weight={null}
  >
    PM
  </TYText>
  <TYText
    align={null}
    color={null}
    size={null}
    style={
      Object {
        "color": "#010101",
        "fontSize": 32,
        "fontWeight": "500",
      }
    }
    type={null}
    weight={null}
  >
    12:00
  </TYText>
</View>
`;
